# app-scanner

./: README.md  pyproject.toml
.github/workflows/: macos-ci.yml
src/app_scanner.egg-info/: PKG-INFO  SOURCES.txt
test/: test_app_scanner.py
